networkpolicy/allow-from-default-ns.yml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: allow-from-default-namespace
spec:
  podSelector:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: default
