networkpolicy/allow-from-same-ns.yml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-same-namespace
spec:
  podSelector:
  ingress:
  - from:
    - podSelector: {}
