networkpolicy/deny-all.yml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: deny-all
spec:
  podSelector:
  ingress: []
